CSS fix for short and long labels
Two style fixes for the "Tags" option:

1) Resets min-width for very short labels, so they don't consume unnecessary space.

2) Very long label names don't cause a horizontal scrollbar anymore.

--- a/trelabels.css
+++ b/trelabels.css
@@ -70,7 +70,8 @@
   height: inherit;
   line-height: 1;
   width: inherit;
-  max-width: 100%;
+  min-width: inherit;
+  max-width: 230px;
   padding: 2px 4px;
   border-radius: 3px;
   margin: 0 2px 3px 0;
